# array_in_terminal

./: CMakeLists.txt  README.md  main.cpp
src/: bubble_sort.cpp  core.cpp  core.h  merge_sort.cpp  selection_sort.cpp  sorts_list.h
src/sorts/: bogo_sort.cpp  bubble_sort.cpp  cocktail_sort.cpp  heap_sort.cpp  insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp  radix_sort.cpp  selection_sort.cpp  smooth_sort.cpp  sorts_list.h
